<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="fragment_nav">Fragment Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="photos">Photos</string>
    <string name="movies">Movies</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_background">Change Background</string>
</resources>