<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/photosFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/photos" />
        <item
            android:id="@+id/moviesFragment"
            android:icon="@drawable/ic_movies"
            android:title="@string/movies" />
        <item
            android:id="@+id/notificationFragment"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />

    </group>

    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/about_us" />
                <item android:title="@string/privacy_policy" />
            </group>
        </menu>
    </item>

</menu>