<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.navigationdrawer.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/photosFragment"
        android:name="com.example.navigationdrawer.fragment.PhotosFragment"
        android:label="@string/photos"
        tools:layout="@layout/fragment_photos" />
    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.example.navigationdrawer.fragment.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.navigationdrawer.fragment.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.navigationdrawer.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>